--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,102 @@
-langchain==0.1.17
-langchain_community==0.0.36
-langchain_openai==0.1.4
-langchain_text_splitters==0.0.1
+aiohttp==3.9.5
+aiosignal==1.3.1
+altair==5.3.0
+annotated-types==0.6.0
+anthropic==0.25.7
+anyio==4.3.0
+appnope==0.1.4
+asttokens==2.4.1
+async-timeout==4.0.3
+attrs==23.2.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+blinker==1.8.1
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+dataclasses-json==0.6.5
+decorator==5.1.1
+defusedxml==0.7.1
+distro==1.9.0
+docopt==0.6.2
+exceptiongroup==1.2.1
+executing==2.0.1
+faiss-cpu==1.8.0
+fastjsonschema==2.19.1
+filelock==3.14.0
+frozenlist==1.4.1
+fsspec==2024.3.1
+gitdb==4.0.11
+GitPython==3.1.43
+greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+huggingface-hub==0.22.2
+idna==3.7
+ipython==8.12.3
+jedi==0.19.1
+Jinja2==3.1.3
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+jupyterlab_pygments==0.3.0
+langchain==0.1.16
+langchain-anthropic==0.1.11
+langchain-community==0.0.34
+langchain-core==0.1.46
+langchain-openai==0.1.4
+langchain-text-splitters==0.0.1
+langsmith==0.1.52
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.1
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.0.2
+multidict==6.0.5
+mypy-extensions==1.0.0
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+numpy==1.26.4
 openai==1.25.0
+orjson==3.10.1
+packaging==23.2
+pandas==2.2.2
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==10.3.0
+pip==24.0
+pipreqs==0.5.0
+platformdirs==4.2.1
+prompt-toolkit==3.0.43
+protobuf==4.25.3
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==16.0.0
+pydantic==2.7.1
+pydantic_core==2.18.2
+pydeck==0.9.0
+Pygments==2.17.2
+pypdf==4.2.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-streamlit==1.33.0
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq==26.0.2
+rank-bm25==0.2.2
+referencing==0.35.0
+regex==2024.4.28
+requests==2.31.0
+rich==13.7.1
+rpds-py==0.18.0
+setuptools==69.5.1
+six==1.16.0
