--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+# 설치 방법 pip install -r requirements.txt
+
 aiohttp==3.9.5
 aiosignal==1.3.1
 altair==5.3.0
@@ -97,6 +99,4 @@ referencing==0.35.0
 regex==2024.4.28
 requests==2.31.0
 rich==13.7.1
-rpds-py==0.18.0
-setuptools==69.5.1
-six==1.16.0
+rpds-py==0.18
